tests/baselines/reference/inheritanceMemberPropertyOverridingAccessor.errors.txt
inheritanceMemberPropertyOverridingAccessor.ts(12,5): error TS2610: 'x' is defined as an accessor in class 'a', but is overridden here in 'b' as an instance property.


==== inheritanceMemberPropertyOverridingAccessor.ts (1 errors) ====
    class a {
        private __x: () => string;
        get x() {
            return this.__x;
        }
        set x(aValue: () => string) {
            this.__x = aValue;
        }
    }
    
    class b extends a {
        x: () => string;
        ~
!!! error TS2610: 'x' is defined as an accessor in class 'a', but is overridden here in 'b' as an instance property.
    }